# convert-to-md

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGING.md  PUBLISH.md  README.md  convert-to-md.example.toml  pyproject.toml
samples/raw/: formulas.docx  formulas.html  local.docx  local.json  local.pptx  local.xlsx  local.xml  quadratic_formula.html  wikipedia_markdown.html
scripts/: download_pix2tex_weights.py  rebuild_formulas_docx.py
src/convert_to_md/: __init__.py  api.py  cache.py  cli.py  config.py  context.py  detect.py  formula_ocr.py  ir.py  mathutil.py  naming.py  ocr.py  pipeline.py  webapp.py
src/convert_to_md/converters/: __init__.py  base.py  docx.py  epub.py  html.py  image.py  pdf.py  pptx.py  textish.py  xlsx.py
src/convert_to_md/render/: __init__.py  markdown.py
src/convert_to_md/web/: index.html
tests/: test_p0.py  test_web.py
