[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert-to-md"
version = "0.6.2"
description = "Local multi-format to Markdown converter (no LLM required)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "a77710178a", email = "77710178@qq.com" }]
keywords = ["markdown", "converter", "pdf", "docx", "ocr", "latex", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "markdownify>=0.13",
  "lxml>=5.0",
  "ebooklib>=0.18",
  "pymupdf>=1.24",
  "charset-normalizer>=3.3",
]

[project.urls]
Homepage = "https://github.com/a77710178a/convert-to-md"
Repository = "https://github.com/a77710178a/convert-to-md"
Issues = "https://github.com/a77710178a/convert-to-md/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0"]
formula = ["pix2tex>=0.1.2", "pillow>=10.0", "torch>=2.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
all = [
  "pytesseract>=0.3.10",
  "pillow>=10.0",
  "pix2tex>=0.1.2",
  "torch>=2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[project.scripts]
convert-to-md = "convert_to_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/convert_to_md"]

# hatchling maps src/convert_to_md → convert_to_md
[tool.hatch.build.targets.sdist]
include = ["src/convert_to_md", "README.md", "pyproject.toml"]

[tool.hatch.build]
include = [
  "src/convert_to_md/**/*.py",
  "src/convert_to_md/web/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
